<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.asymmetric.AsymmetricFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/asymmetric_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/asymmetric_page_title" />

    <Button
        android:id="@+id/generateKeyButton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#009688"
        android:text="Generate Key"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/removeKeyButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asymmetric_text" />

    <Button
        android:id="@+id/removeKeyButton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:backgroundTint="#FF5722"
        android:text="Remove Key"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/generateKeyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/generateKeyButton"
        app:layout_constraintTop_toTopOf="@+id/generateKeyButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/keyStatusTextView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="20dp"
        android:background="#DAD8D8"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateKeyButton"
        tools:text="Key Exist?" />

    <EditText
        android:id="@+id/userInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/please_enter_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyStatusTextView" />

    <Button
        android:id="@+id/signKeyButton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFC107"
        android:text="Sign Message"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/removeKeyButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInputEditText" />

    <Button
        android:id="@+id/verifyKeyButton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:backgroundTint="#03A9F4"
        android:text="Verify Message"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/signKeyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signKeyButton"
        app:layout_constraintTop_toTopOf="@+id/signKeyButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signedTextView"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#DAD8D8"
        android:gravity="center"
        android:paddingHorizontal="4dp"
        android:text="@string/unknown_signed"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signKeyButton"
        app:layout_constraintStart_toStartOf="@+id/signKeyButton"
        app:layout_constraintTop_toBottomOf="@+id/signKeyButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verifiedTextView"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="#DAD8D8"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="4dp"
        android:text="@string/unknown_verified"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/verifyKeyButton"
        app:layout_constraintStart_toStartOf="@+id/verifyKeyButton"
        app:layout_constraintTop_toBottomOf="@+id/verifyKeyButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#FFF"
        android:visibility="gone"
        android:background="@color/black"
        android:text="Cant authenticate, please add a fingerprint."/>

</androidx.constraintlayout.widget.ConstraintLayout>